cicd/quarkus.deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-quickstart-blue
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: quarkus-quickstart-blue
  template:
    metadata:
      labels:
        app: quarkus-quickstart-blue
    spec:
      containers:
      - image: quay.io/tssc/quarkus-quickstart:v0.1
        name: quarkus-quickstart-blue
        ports:
        - containerPort: 8080
