cicd/quarkus.svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-quickstart-blue
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: quarkus-quickstart-blue
