cicd/quarkus.svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-quickstart-green
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: quarkus-quickstart-green
