cicd/quarkus.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: quarkus
