cicd/quarkus.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus
  namespace: default
  labels:
    app.kubernetes.io/instance: quarkus
spec:
  to:
    kind: Service
    name: quarkus-quickstart
    weight: 100
  wildcardPolicy: None
